# trada

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  acme.json  docker-compose.yml  pyproject.toml  requirements.txt  traefik.toml
.github/workflows/: all.yml  unit_test.yml
src/: config.py  logger.py  main.py
src/api/: app.py  basemodels.py
src/api/admin_depends/: auth.py
src/api/depends/: auth.py
src/api/exceptions/: __init__.py  auth.py  base.py  internal_errors.py  room_errors.py  user_errors.py
src/api/routers/: groups.py  join_group.py  messages.py  send_message.py  users.py
src/api/routers/admin/: routers.py  schemas.py  shemas.py
src/api/routers/auth/: routers.py  schemas.py
src/api/routers/groups/: routers.py  schemas.py
src/api/routers/join_group/: routers.py  schemas.py
src/api/routers/messages/: routers.py  schemas.py
src/api/routers/room/: routers.py  schemas.py
src/api/routers/send_message/: routers.py  schemas.py
src/api/routers/users/: routes.py  schemas.py
src/api/routers/websocket/: routes.py
src/libs/: data_manager.py
src/libs/models/: admin.py  groups.py  groups_join.py  message.py  room.py  room_member.py  users.py
src/services/admin/: __init__.py  api.py  logic.py
src/services/auth/: __init__.py  service.py
src/services/crud/: database.py
src/services/crud/messages/: api.py  logic.py
src/services/crud/room/: api.py  (+2 more)
src/services/message_management/: __init__.py  api.py  logic.py  publish.py  subscribe.py
tests/unit/: test_connect.py  test_init.py  test_login.py  test_register.py
(+18 files in other folders)
