[tool.poetry]
name = "trada"
version = "0.1.0"
description = ""
authors = ["vuonglv <it.vuonglv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.3"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
